--- a/src/api/python/Makefile
+++ b/src/api/python/Makefile
@@ -25,22 +25,22 @@ PySQLRDB.py: PySQLRDB.py.in
 	$(RM) temp.py.in
 
 install: $(INSTALLLIB)
-	$(CP) PySQLRClient.py $(DESTDIR)$(PYTHONDIR)/$(PYTHONSITEDIR)/SQLRelay
-	$(CHMOD) 644 $(DESTDIR)$(PYTHONDIR)/$(PYTHONSITEDIR)/SQLRelay/PySQLRClient.py
-	$(CP) PySQLRDB.py $(DESTDIR)$(PYTHONDIR)/$(PYTHONSITEDIR)/SQLRelay
-	$(CHMOD) 644 $(DESTDIR)$(PYTHONDIR)/$(PYTHONSITEDIR)/SQLRelay/PySQLRDB.py
-	$(CP) __init__.py $(DESTDIR)$(PYTHONDIR)/$(PYTHONSITEDIR)/SQLRelay
-	$(CHMOD) 644 $(DESTDIR)$(PYTHONDIR)/$(PYTHONSITEDIR)/SQLRelay/__init__.py
+	$(CP) PySQLRClient.py $(DESTDIR)$(PYTHONSITEDIR)/SQLRelay
+	$(CHMOD) 644 $(DESTDIR)$(PYTHONSITEDIR)/SQLRelay/PySQLRClient.py
+	$(CP) PySQLRDB.py $(DESTDIR)$(PYTHONSITEDIR)/SQLRelay
+	$(CHMOD) 644 $(DESTDIR)$(PYTHONSITEDIR)/SQLRelay/PySQLRDB.py
+	$(CP) __init__.py $(DESTDIR)$(PYTHONSITEDIR)/SQLRelay
+	$(CHMOD) 644 $(DESTDIR)$(PYTHONSITEDIR)/SQLRelay/__init__.py
 
 installdll:
-	$(MKINSTALLDIRS) $(DESTDIR)$(PYTHONDIR)/$(PYTHONSITEDIR)/SQLRelay
-	$(LTINSTALL) $(CP) CSQLRelay.$(LIBEXT) $(DESTDIR)$(PYTHONDIR)/$(PYTHONSITEDIR)/SQLRelay/CSQLRelay.$(PYTHONSUFFIX)
+	$(MKINSTALLDIRS) $(DESTDIR)$(PYTHONSITEDIR)/SQLRelay
+	$(LTINSTALL) $(CP) CSQLRelay.$(LIBEXT) $(DESTDIR)$(PYTHONSITEDIR)/SQLRelay/CSQLRelay.$(PYTHONSUFFIX)
 
 installlib:
-	$(MKINSTALLDIRS) $(DESTDIR)$(PYTHONDIR)/$(PYTHONSITEDIR)/SQLRelay
-	$(LTINSTALL) $(CP) CSQLRelay.$(LIBEXT) $(DESTDIR)$(PYTHONDIR)/$(PYTHONSITEDIR)/SQLRelay
-	$(RM) $(DESTDIR)$(PYTHONDIR)/$(PYTHONSITEDIR)/SQLRelay/CSQLRelay.$(LIBEXT)
-	$(RM) $(DESTDIR)$(PYTHONDIR)/$(PYTHONSITEDIR)/SQLRelay/CSQLRelay.a
+	$(MKINSTALLDIRS) $(DESTDIR)$(PYTHONSITEDIR)/SQLRelay
+	$(LTINSTALL) $(CP) CSQLRelay.$(LIBEXT) $(DESTDIR)$(PYTHONSITEDIR)/SQLRelay
+	$(RM) $(DESTDIR)$(PYTHONSITEDIR)/SQLRelay/CSQLRelay.$(LIBEXT)
+	$(RM) $(DESTDIR)$(PYTHONSITEDIR)/SQLRelay/CSQLRelay.a
 
 uninstall:
-	$(RMTREE) $(PYTHONDIR)/$(PYTHONSITEDIR)/SQLRelay
+	$(RMTREE) $(PYTHONSITEDIR)/SQLRelay
