--- a/test/sqlrelay.conf.d/mysqldeadlockreplay.conf.in
+++ b/test/sqlrelay.conf.d/mysqldeadlockreplay.conf.in
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <instances>
 
-	<instance id="mysqldeadlockreplaytest" port="9000" socket="/tmp/test.socket" dbase="mysql" debug="sql triggers">
+	<instance id="mysqldeadlockreplaytest" port="9000" socket="/tmp/test.socket" dbase="mysql">
 		<users>
 			<user user="test" password="test"/>
 		</users>
@@ -17,7 +17,7 @@
                         </trigger>
                 </triggers>
 		<connections>
-			<connection string="host=mysql;user=testuser;password=testpassword;db=@HOSTNAME@;foundrows=yes"/>
+			<connection string="host=mysql;user=testuser;password=testpassword;db=@HOSTNAME@;foundrows=yes;autocommit=yes"/>
 		</connections>
 	</instance>
 
