--- a/src/configs/Makefile
+++ b/src/configs/Makefile
@@ -17,7 +17,7 @@ clean:
 	$(RMTREE) .libs
 
 $(SQLR)config_xmldom.$(LIBEXT): xmldom.cpp xmldom.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ xmldom.$(OBJ) $(LDFLAGS) $(CONFIGPLUGINLIBS) $(MODLINKFLAGS)
+	$(LTLINK) $(LINK) $(OUT)$@ xmldom.$(OBJ) $(LDFLAGS) $(UTILPLUGINLIBS) $(MODLINKFLAGS)
 
 install: $(INSTALLLIB)
 
