--- a/src/pwdencs/Makefile
+++ b/src/pwdencs/Makefile
@@ -22,22 +22,22 @@ clean:
 	$(RMTREE) .libs
 
 $(SQLR)pwdenc_rot.$(LIBEXT): rot.cpp rot.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ rot.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+	$(LTLINK) $(LINK) $(OUT)$@ rot.$(OBJ) $(LDFLAGS) $(UTILPLUGINLIBS) $(MODLINKFLAGS)
 
 $(SQLR)pwdenc_md5.$(LIBEXT): md5.cpp md5.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ md5.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+	$(LTLINK) $(LINK) $(OUT)$@ md5.$(OBJ) $(LDFLAGS) $(UTILPLUGINLIBS) $(MODLINKFLAGS)
 
 $(SQLR)pwdenc_sha1.$(LIBEXT): sha1.cpp sha1.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ sha1.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+	$(LTLINK) $(LINK) $(OUT)$@ sha1.$(OBJ) $(LDFLAGS) $(UTILPLUGINLIBS) $(MODLINKFLAGS)
 
 $(SQLR)pwdenc_sha256.$(LIBEXT): sha256.cpp sha256.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ sha256.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+	$(LTLINK) $(LINK) $(OUT)$@ sha256.$(OBJ) $(LDFLAGS) $(UTILPLUGINLIBS) $(MODLINKFLAGS)
 
 $(SQLR)pwdenc_des.$(LIBEXT): des.cpp des.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ des.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+	$(LTLINK) $(LINK) $(OUT)$@ des.$(OBJ) $(LDFLAGS) $(UTILPLUGINLIBS) $(MODLINKFLAGS)
 
 $(SQLR)pwdenc_aes128.$(LIBEXT): aes128.cpp aes128.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ aes128.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+	$(LTLINK) $(LINK) $(OUT)$@ aes128.$(OBJ) $(LDFLAGS) $(UTILPLUGINLIBS) $(MODLINKFLAGS)
 
 install: $(INSTALLLIB)
 
