--- a/configure.in
+++ b/configure.in
@@ -628,6 +628,7 @@ FW_CHECK_SYLLABLE
 FW_CHECK_SCO
 FW_CHECK_OSX
 FW_CHECK_IRIX
+FW_CHECK_HPUX
 FW_CHECK_SO_EXT
 AC_DEFINE_UNQUOTED(SQLRELAY_MODULESUFFIX,"$MODULESUFFIX",Suffix for loadable modules)
 FW_CHECK_LD_RPATH
