removed LTCLEAN to speed up clean/distclean

--- a/src/api/c++/Makefile
+++ b/src/api/c++/Makefile
@@ -40,7 +40,7 @@ LOBJS = sqlrconnection.$(OBJ) \
 all: lib$(SQLR)client.$(LIBEXT)
 
 clean:
-	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
+	$(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
 	$(RMTREE) .libs
 
 lib$(SQLR)client.$(LIBEXT): $(SRCS) $(LOBJS)
