--- a/src/directives/Makefile
+++ b/src/directives/Makefile
@@ -15,7 +15,7 @@ all: $(SQLR)directive_custom_wf.$(LIBEXT) \
 	$(SQLR)directive_singlestep.$(LIBEXT)
 
 clean:
-	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
+	$(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
 	$(RMTREE) .libs
 
 $(SQLR)directive_custom_wf.$(LIBEXT): custom_wf.cpp custom_wf.$(OBJ)
