--- a/src/protocols/Makefile
+++ b/src/protocols/Makefile
@@ -19,7 +19,7 @@ all: $(SQLR)protocol_sqlrclient.$(LIBEXT) \
 	$(SQLR)protocol_teradata.$(LIBEXT)
 
 clean:
-	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
+	$(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
 	$(RMTREE) .libs
 
 $(SQLR)protocol_sqlrclient.$(LIBEXT): sqlrclient.cpp sqlrclient.$(OBJ)
