--- a/test/protocol/postgresql/Makefile
+++ b/test/protocol/postgresql/Makefile
@@ -16,4 +16,5 @@ postgresql: postgresql.cpp postgresql.$(OBJ)
 	$(LTLINK) $(LINK) $(LDFLAGS) $(OUT)$@$(EXE) postgresql.$(OBJ) $(POSTGRESQLLIBS) $(RUDIMENTSLIBS)
 
 clean:
-	$(LTCLEAN) $(RM) *.lo *.o *.obj *.class postgresql$(EXE)
+	$(RM) *.lo *.o *.obj *.class postgresql$(EXE)
+	$(RMTREE) .libs
