--- a/src/api/python/Makefile
+++ b/src/api/python/Makefile
@@ -13,7 +13,7 @@ include ../../../config.mk
 all: CSQLRelay.$(LIBEXT) PySQLRDB.py
 
 clean:
-	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest PySQLRDB.py temp.py.in *.pyc *.ii
+	$(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest PySQLRDB.py temp.py.in *.pyc *.ii
 	$(RMTREE) .libs __pycache__
 
 CSQLRelay.$(LIBEXT): CSQLRelay.cpp CSQLRelay.$(OBJ)
