--- a/src/moduledatas/Makefile
+++ b/src/moduledatas/Makefile
@@ -13,7 +13,7 @@ include ../../config.mk
 all: $(SQLR)moduledata_tag.$(LIBEXT)
 
 clean:
-	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
+	$(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
 	$(RMTREE) .libs
 
 $(SQLR)moduledata_tag.$(LIBEXT): tag.cpp tag.$(OBJ)
