--- a/src/notifications/Makefile
+++ b/src/notifications/Makefile
@@ -13,7 +13,7 @@ include ../../config.mk
 all: $(SQLR)notification_events.$(LIBEXT)
 
 clean:
-	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
+	$(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
 	$(RMTREE) .libs
 
 $(SQLR)notification_events.$(LIBEXT): events.cpp events.$(OBJ)
