--- a/test/c/Makefile
+++ b/test/c/Makefile
@@ -13,7 +13,7 @@ include ../../config.mk
 all: db2 freetds firebird mysql oracle postgresql sqlite sap krb tls
 
 clean:
-	$(LTCLEAN) $(RM) *.lo *.o *.obj db2$(EXE) freetds$(EXE) firebird$(EXE) mysql$(EXE) oracle$(EXE) postgresql$(EXE) sqlite$(EXE) sap$(EXE) krb$(EXE) tls$(EXE) cachefile* sqlnet.log
+	$(RM) *.lo *.o *.obj db2$(EXE) freetds$(EXE) firebird$(EXE) mysql$(EXE) oracle$(EXE) postgresql$(EXE) sqlite$(EXE) sap$(EXE) krb$(EXE) tls$(EXE) cachefile* sqlnet.log
 	$(RMTREE) .libs
 
 db2: db2.c db2.$(OBJ)
